hphp/test/slow/inout/msrv-unpack-error.php.expectf

Fatal error: In/out function called dynamically without inout annotations in %s/msrv-unpack-error.php on line 4
